--- a/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
@@ -231,7 +231,7 @@
                                 $('.toastrDefaultSuccess').trigger('click');
 
                                 setTimeout(function () {
-                                    redirectPage('@Url.Action("ProductionPriceCreate")');
+                                    redirectPage('@Url.Action("ProductionPriceList")');
                                 }, 500);
 
                             }
