--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductDetails.cshtml
@@ -13,7 +13,7 @@
     {
         <tr style="width: 100%; background-color: #FFFFE0 ">
             <td style="width:10%">Date</td>
-            <td style="width:17%"><b>@info.InvoiceDate.Value.ToShortDateString()</b></td>
+            <td style="width:17%"><b>@info.InvoiceDate.Value.ToString("yyyy-MMM-dd")</b></td>
 
             <td style="width:10%">Invoice No</td>
             <td style="width:25%"><b>@info.InvoiceNo</b></td>
