--- a/ERPWeb/Reports/ERPRpt/Agriculture/rptAgroProductSalesReport.rdlc
+++ b/ERPWeb/Reports/ERPRpt/Agriculture/rptAgroProductSalesReport.rdlc
@@ -1261,13 +1261,6 @@
                       <FontWeight>Bold</FontWeight>
                     </Style>
                   </TextRun>
-                  <TextRun>
-                    <Value>=format(CDate(today), "dd MMM yyyy")</Value>
-                    <Style>
-                      <FontSize>8pt</FontSize>
-                      <FontWeight>Normal</FontWeight>
-                    </Style>
-                  </TextRun>
                 </TextRuns>
                 <Style />
               </Paragraph>
@@ -1276,7 +1269,7 @@
             <Top>3.24875in</Top>
             <Left>6.02136in</Left>
             <Height>0.25in</Height>
-            <Width>1.42162in</Width>
+            <Width>0.44245in</Width>
             <ZIndex>16</ZIndex>
             <Style>
               <Border>
@@ -1321,13 +1314,6 @@
                       <FontWeight>Bold</FontWeight>
                     </Style>
                   </TextRun>
-                  <TextRun>
-                    <Value>=format(CDate(today), "dd MMM yyyy")</Value>
-                    <Style>
-                      <FontSize>8pt</FontSize>
-                      <FontWeight>Normal</FontWeight>
-                    </Style>
-                  </TextRun>
                 </TextRuns>
                 <Style />
               </Paragraph>
@@ -1336,7 +1322,7 @@
             <Top>2.91195in</Top>
             <Left>6.00053in</Left>
             <Height>0.28472in</Height>
-            <Width>1.44245in</Width>
+            <Width>0.46328in</Width>
             <ZIndex>17</ZIndex>
             <Style>
               <Border>
@@ -2240,6 +2226,76 @@
             <Height>0.25in</Height>
             <Width>1in</Width>
             <ZIndex>43</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+              <PaddingLeft>2pt</PaddingLeft>
+              <PaddingRight>2pt</PaddingRight>
+              <PaddingTop>2pt</PaddingTop>
+              <PaddingBottom>2pt</PaddingBottom>
+            </Style>
+          </Textbox>
+          <Textbox Name="InvoiceDate">
+            <CanGrow>true</CanGrow>
+            <KeepTogether>true</KeepTogether>
+            <Paragraphs>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>=First(Fields!InvoiceDate.Value, "dsAgroSalesReport")</Value>
+                    <Style>
+                      <FontSize>8pt</FontSize>
+                      <Format>dd-MMM-yy</Format>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style>
+                  <TextAlign>Left</TextAlign>
+                </Style>
+              </Paragraph>
+            </Paragraphs>
+            <rd:DefaultName>InvoiceDate</rd:DefaultName>
+            <Top>2.91195in</Top>
+            <Left>6.33208in</Left>
+            <Height>0.26736in</Height>
+            <Width>1.03125in</Width>
+            <ZIndex>44</ZIndex>
+            <Style>
+              <Border>
+                <Style>None</Style>
+              </Border>
+              <PaddingLeft>2pt</PaddingLeft>
+              <PaddingRight>2pt</PaddingRight>
+              <PaddingTop>2pt</PaddingTop>
+              <PaddingBottom>2pt</PaddingBottom>
+            </Style>
+          </Textbox>
+          <Textbox Name="ChallanDate">
+            <CanGrow>true</CanGrow>
+            <KeepTogether>true</KeepTogether>
+            <Paragraphs>
+              <Paragraph>
+                <TextRuns>
+                  <TextRun>
+                    <Value>=First(Fields!ChallanDate.Value, "dsAgroSalesReport")</Value>
+                    <Style>
+                      <FontSize>8pt</FontSize>
+                      <Format>dd-MMM-yy</Format>
+                    </Style>
+                  </TextRun>
+                </TextRuns>
+                <Style>
+                  <TextAlign>Left</TextAlign>
+                </Style>
+              </Paragraph>
+            </Paragraphs>
+            <rd:DefaultName>ChallanDate</rd:DefaultName>
+            <Top>3.26611in</Top>
+            <Left>6.33208in</Left>
+            <Height>0.23264in</Height>
+            <Width>1.03125in</Width>
+            <ZIndex>45</ZIndex>
             <Style>
               <Border>
                 <Style>None</Style>
