--- a/ERPWeb/Views/User/Index.cshtml
+++ b/ERPWeb/Views/User/Index.cshtml
@@ -428,7 +428,7 @@
                     borderColor: "#3e95cd",
                     fill: false
                 }, {
-                        data: [865000, 727500, 718900, 2210000, 94000, 45000, 160000, 45000, 900000, 80000, 85000],
+                        data: [86500, 72750, 71890, 22100, 94000, 45000, 160000, 45000, 90000, 80000, 85000],
                     label: "Terget",
                     borderColor: "#8e5ea2",
                     fill: false
