--- a/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
@@ -672,7 +672,7 @@
                         <span class="error hide duplicate-AreaName font-weight-bold">Already Area Exist!</span>
                     </div>
                     <div class="col-md-2">
-                        <label for="sddlTerritoryName" class="control-label">Area Name</label>
+                        <label for="sddlTerritoryName" class="control-label">Territory Name</label>
                         @Html.DropDownList("sddlTerritoryName", (IEnumerable<SelectListItem>)ViewBag.ddlTerritoryName, "Territory", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                         <span class="error hide required-AreaName font-weight-bold">Select Area Name!</span>
                         <span class="error hide duplicate-AreaName font-weight-bold">Already Area Exist!</span>
