--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductEdit.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductEdit.cshtml
@@ -16,7 +16,7 @@
             <th>Price</th>
             <th>Discount%</th>
             <th class="hide">Total</th>
-            <th>Action</th>
+            <th>Remove(Yes/No)</th>
             
         </tr>
     </thead>
