--- a/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
@@ -108,6 +108,11 @@
                
                 <div class="col-md-12">
                     <div class="row">
+                        <h3 class="text-center">Sales Edit</h3>
+                        <button type="button" class="close text-white" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+
+                    </div>
+                    <div class="row">
                         <input type="hidden" id="hdSalesId" />
                         <div class="col-md-3">
                             <label class="text-sm">Date</label>
@@ -157,7 +162,7 @@
 
 
             </div>
-            <div class="modal-footer btn-default">
+            <div class="modal-footer btn bg-gradient-gray-dark"">
                 <div class="col-md-6">
                     <div id="msg1" class="alert alert-success hide float-left">
                         Data has been saved Successful!
