--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -443,6 +443,9 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
+            $(function () {
+                $('#ddlClientName').focus();
+            });
             //InvoiceDate.prop('readonly', true);
             //InvoiceDate.css("background-color", "#fff");
             //$('#InvoiceDate').datepicker({
