--- a/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturn.cshtml
@@ -122,7 +122,9 @@
                 theme: 'bootstrap4'
             });
 
-
+            $(function () {
+                $('#ddlstokiestname').focus();
+            });
         })
 
 
