--- a/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
@@ -15,7 +15,8 @@
                                 <div class="card card-navy">
                                     <div class="card-header">
                                         <div class="row">
-                                            <div class="col-md-3">
+                                            <div class="col-md-3 ">
+                                                <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by RM" />
                                             </div>
                                             <div class="col-md-6">
                                                 <h5 class="text-center text-bold">
@@ -29,7 +30,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-12" style="margin-top:-15px">
+                            @*<div class="col-md-12" style="margin-top:-15px">
                                 <div class="card card-gray-dark">
                                     <div class="card-header">
                                         <div class="row ">
@@ -39,14 +40,13 @@
 
                                             <div class="col-md-3 ">
                                                 <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
-
                                             </div>
                                         </div>
                                        
                                     </div>
                                     
                                 </div>
-                            </div>
+                            </div>*@
                             <div class="col-md-12" style="margin-top:-10px">
                                 <div class="card">
                                     <div class="card-body">
