--- a/ERPWeb/Views/Shared/_AdminDashboard.cshtml
+++ b/ERPWeb/Views/Shared/_AdminDashboard.cshtml
@@ -58,10 +58,10 @@
     </noscript>
     <div class="wrapper">
         <!-- Navbar -->
-        <nav class="main-header navbar navbar-expand " style="background-image: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%) ">
+        <nav class="main-header navbar navbar-expand " style="background-image: linear-gradient(0deg, rgba(34,127,195,0.8272351176798844) 0%, rgba(45,253,222,1) 100%); ">
             <!-- Left navbar links -->
             <ul class="navbar-nav">
-                <li class="nav-item  rounded" style="background-image: linear-gradient(0deg, rgba(34,127,195,0.8272351176798844) 0%, rgba(45,253,222,1) 100%);">
+                <li class="nav-item  rounded" style="background-image: linear-gradient(0deg, rgba(240,255,255,1) 0%, rgba(45,228,253,1) 100%);">
                     <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars" style="color: #000000;"></i></a>
                 </li>
             </ul>
@@ -69,15 +69,15 @@
             <!-- Right navbar links -->
             <ul class="navbar-nav ml-auto ">
 
-                <li class="nav-item " style="background-image: linear-gradient(0deg, rgba(34,127,195,0.8272351176798844) 0%, rgba(45,253,222,1) 100%); ">
+                <li class="nav-item " style="background-image: linear-gradient(0deg, rgba(240,255,255,1) 0%, rgba(45,228,253,1) 100%); ">
                     <a class="nav-link" data-widget="fullscreen" href="#" role="button">
                         <i class="fas fa-expand-arrows-alt" style="color: #000000;"></i>
                     </a>
                 </li>
                 <li class="nav-item bg-dark">
-                    <a class="nav-link " style="background-image: linear-gradient(0deg, rgba(34,127,195,0.8272351176798844) 0%, rgba(45,253,222,1) 100%);">
-                        <span class="badge " style="background-image: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);">
-                            <b style="color: #000000;"><span></span> @User.FullName</b>
+                    <a class="nav-link " style="background-image: linear-gradient(0deg, rgba(240,255,255,1) 0%, rgba(45,228,253,1) 100%);">
+                        <span class="badge " style="background-image: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(0,233,255,1) 100%); ">
+                            <b style="color: #FFFF00; "><span></span> @User.FullName</b>
                         </span>
                         <span class="badge " style="background-image: linear-gradient(0deg, rgba(34,62,195,0.8272351176798844) 0%, rgba(252,253,45,1) 100%); ">
                             <b style="color: #000000;">@User.BranchName Branch</b>
@@ -91,7 +91,7 @@
                     </a>
                 </li>
 
-                <li class="nav-item dropdown bg-primary rounded-end" style="background-image: linear-gradient(0deg, rgba(34,127,195,0.8272351176798844) 0%, rgba(45,253,222,1) 100%);">
+                <li class="nav-item dropdown bg-primary rounded-end" style="background-image: linear-gradient(0deg, rgba(240,255,255,1) 0%, rgba(45,228,253,1) 100%);">
                     <a class="nav-link " data-toggle="dropdown" href="#">
                         <i class="fas fa-user-circle fa-stack-1x" style="color: #000000;"></i>
                     </a>
@@ -135,9 +135,9 @@
         <div class="wrapper">
             <!-- /.navbar -->
             <!-- Main Sidebar Container -->
-            <aside class="main-sidebar  elevation-4" style="background-image: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%) ">
+            <aside class="main-sidebar  elevation-4" style="background-image: linear-gradient(0deg, rgba(34,127,195,0.8272351176798844) 0%, rgba(45,253,222,1) 100%);">
                 <!-- Brand Logo -->
-                <a href="#" class="brand-link " style="background-image: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%) ">
+                <a href="#" class="brand-link " style="background-image: linear-gradient(0deg, rgba(34,127,195,0.8272351176798844) 0%, rgba(45,253,222,1) 100%); ">
                     <img src="~/Content/dist/img/fivestar.png" alt="PO24" class="brand-image img-circle elevation-3"
                          style="opacity: .8" />
                     <span class="brand-text font-weight-bold" style="color: #000000;">PO24 ERP</span>
@@ -172,7 +172,7 @@
 
                         <div class="input-group">
                             @*<button type="button" class="form-control form-control-sidebar btn btn-light">DashBoard</button>*@
-                            <a href="/User/Index" style="background-image: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%)" class="form-control form-control-sidebar btn text-bold btn-light" id="btnAddNew">Dashboard</a>
+                            <a href="/User/Index" style="background-image: linear-gradient(0deg, rgba(240,255,255,1) 0%, rgba(45,228,253,1) 100%); " class="form-control form-control-sidebar btn text-bold btn-light" id="btnAddNew">Dashboard</a>
                         </div>
                            
 
@@ -202,13 +202,13 @@
                             <a class="dropdown-item" href="#" data-widget="iframe-close" data-type="all-other">Close All Other</a>
                         </div>
                     </div>
-                    <a class="nav-link bg-light" style="background-image: linear-gradient(0deg, rgba(34,127,195,0.8272351176798844) 0%, rgba(45,253,222,1) 100%); " href="#" data-widget="iframe-scrollleft" ><i class="fas fa-angle-double-left" style="color: #000000;" ></i></a>
+                    <a class="nav-link bg-light" style="background-image: linear-gradient(0deg, rgba(240,255,255,1) 0%, rgba(45,228,253,1) 100%); " href="#" data-widget="iframe-scrollleft" ><i class="fas fa-angle-double-left" style="color: #000000;" ></i></a>
                     @*<a class="nav-link bg-light" href="#" onclick="history.back();"><i class="fas fa-angle-left"></i></a>*@
                     <ul class="navbar-nav overflow-hidden"  role="tablist"></ul>
 
                     @*<a class="nav-link bg-light" href="#" onclick="myfunction2()"><i class="fas fa-redo-alt"></i></a>*@
-                    <a class="nav-link bg-light" style="background-image: linear-gradient(0deg, rgba(34,127,195,0.8272351176798844) 0%, rgba(45,253,222,1) 100%); "  href="#" data-widget="iframe-scrollright"><i class="fas fa-angle-double-right" style="color: #000000;"></i></a>
-                    <a class="nav-link bg-light" style="background-image: linear-gradient(0deg, rgba(34,127,195,0.8272351176798844) 0%, rgba(45,253,222,1) 100%); "  href="#" data-widget="iframe-fullscreen"><i class="fas fa-expand" style="color: #000000;"></i></a>
+                    <a class="nav-link bg-light" style="background-image: linear-gradient(0deg, rgba(240,255,255,1) 0%, rgba(45,228,253,1) 100%); "  href="#" data-widget="iframe-scrollright"><i class="fas fa-angle-double-right" style="color: #000000;"></i></a>
+                    <a class="nav-link bg-light" style="background-image: linear-gradient(0deg, rgba(240,255,255,1) 0%, rgba(45,228,253,1) 100%); "  href="#" data-widget="iframe-fullscreen"><i class="fas fa-expand" style="color: #000000;"></i></a>
 
                 </div>
                 <div class="tab-content">
