--- a/ERPWeb/Views/AgroConfiguration/CreateDivisionInfo.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateDivisionInfo.cshtml
@@ -106,6 +106,10 @@
         $('.select2bs4').select2({
             theme: 'bootstrap4'
         });
+
+        $(function () {
+            $('#ddlZoneName').focus();
+        });
     })
 
 
