--- a/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateFinishGoodRecipe.cshtml
@@ -192,6 +192,10 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
+
+            $(function () {
+                $('#ddlProductName').focus();
+            });
         })
 
 
