--- a/ERPWeb/Views/AgroConfiguration/CreateRegionlist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateRegionlist.cshtml
@@ -106,7 +106,9 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
-
+            $(function () {
+                $('#ddldivname').focus();
+            });
 
         })
        //change zone
