--- a/ERPWeb/Views/AgroConfiguration/CreateStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateStockiestList.cshtml
@@ -209,7 +209,9 @@
                 theme: 'bootstrap4'
             });
             $("#txtclamount").hide();
-
+            $(function () {
+                $('#ddlareaname').focus();
+            });
 
         })
 
