--- a/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetProductFinishGoodList.cshtml
@@ -214,6 +214,9 @@
             $("#addTolist").hide();
 
             //$("#btnSubmit").hide();
+            $(function () {
+                $('#ddlProduct').focus();
+            });
        
         })
 
