--- a/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductCommision.cshtml
@@ -317,6 +317,10 @@
                 theme: 'bootstrap4'
             });
 
+            $(function () {
+                $('#ddlProductName').focus();
+            });
+
 
             dptFromDate.prop('readonly', true);
             dptToDate.prop('readonly', true);
