--- a/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
@@ -247,7 +247,12 @@
 
             //LoadDataTableStock();
             //LoadDataTable();
-
+            $(function () {
+                $('#ddlRawMaterial').focus();
+            });
+            $(function () {
+                $('#ddlProduct').focus();
+            });
 
 
 
