--- a/ERPWeb/Views/AgroConfiguration/CreateZonelist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateZonelist.cshtml
@@ -101,6 +101,10 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
+
+            $(function () {
+                $('#ddlZoneName').focus();
+            });
         })
 
 
