--- a/ERPWeb/Views/AgroConfiguration/GetArealist.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetArealist.cshtml
@@ -117,6 +117,10 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
+
+            $(function () {
+                $('#ddlRegionname').focus();
+            });
         })
 
 
