--- a/ERPWeb/Views/AgroConfiguration/GetFinishGoodProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetFinishGoodProduct.cshtml
@@ -117,6 +117,10 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
+            $(function () {
+                $('#ddlProductName').focus();
+            });
+
             LoadProductDataTable()
         })
         function LoadDataInitializer() {
@@ -216,6 +220,9 @@
             $("#spanSaveTextProduct").text('Save');
             $("#modalProduct").modal("show");
             $(".error").addClass("hide");
+            $(function () {
+                $('#ddlProductName').focus();
+            });
         }
         $("#addButton").click(function (e) {
             e.preventDefault();
