--- a/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
@@ -147,7 +147,9 @@
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             });
-
+            $(function () {
+                $('#ddlProductName').focus();
+            });
 
         })
 
