--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -606,7 +606,7 @@
 
             if (validates() == true) {
 
-                LoadCurrentFinishGoodStock();
+         /*       LoadCurrentFinishGoodStock();*/
 
 
 
